# Ceres.js

./: .env  .gitignore  .travis.yml  CMakeLists.txt  CMakeListsCeres.txt  Ceres-v1.0.js  Ceres-v1.1.js  Ceres-v1.2.js  Ceres-v1.3.0.js  Ceres-v1.3.1.js  Ceres-v1.3.11.js  Ceres-v1.3.12.js  Ceres-v1.3.13.js  Ceres-v1.3.14.js  Ceres-v1.3.16.js  Ceres-v1.3.17.js  Ceres-v1.3.19.js  Ceres-v1.3.2.js  Ceres-v1.3.20.js  Ceres-v1.3.4.js  Ceres-v1.3.5.js  Ceres-v1.3.6.js  Ceres-v1.3.7.js  Ceres-v1.3.8.js  Ceres-v1.3.9.js  Ceres-v1.3.js  Ceres-v1.4.1.js  Ceres-v1.4.10.js  Ceres-v1.4.11.js  Ceres-v1.4.12.js  Ceres-v1.4.13.js  Ceres-v1.4.2.js  Ceres-v1.4.3.js  Ceres-v1.4.4.js  Ceres-v1.4.5.js  Ceres-v1.4.6.js  Ceres-v1.4.7.js  Ceres-v1.4.8.js  Ceres-v1.4.9.js  Ceres-v1.4.js  (+14 more)
.circleci/: config.yml
.github/: short-build.yml
.github/workflows/: build-ceres.yml  emscripten.yml  short-build.yml  static.yml
app/: package-lock.json  package.json  webpack.config.js
app/src/: main.js
docs/: arrow_functions.html  basic.html  common_js.html  composite.html  index.html  json_syntax.html  powell.html  powell2.html  quadratic.html  rosenbrock.html  rosenbrook.html  test.html  user1.html
docs/js/: prism.js
docs/themes/: prism.css
src/: ceresjs.cpp  test.cpp
